@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.597 2006/02/13 00:24:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.598 2006/02/14 16:47:57 agaffney Exp $
 
 *GLI-0.3 (12 Feb 2006)
+
+  14 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py:
+  add get_chosts() function
 
   12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
